maven-wrapper.jar added

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
     build: ./api/
     ports: 
       - "8080:8080"
+    depends_on: 
+      - db 
   mail:
     image: bytemark/smtp
     restart: always
@@ -38,14 +40,4 @@ services:
   myadmin:
     image : phpmyadmin
     ports:
-      - "8082:80"  
-  # front:
-  #   image: bunkerity/bunkerized-nginx
-  #   restart: always
-  #   ports:
-  #     - 80:8080
-  #   volumes:
-  #     - ./distfront:/www:ro
-  #     - ./server-confs:/server-confs:ro
-  #   environment:
-  #     - USE_CLIENT_CACHE=yes
+      - "8082:80"
