fix database and reverse-proxy

--- a/api/server-confs/api.conf
+++ b/api/server-confs/api.conf
@@ -7,7 +7,13 @@ location /api {
 		proxy_set_header Upgrade $http_upgrade;
 	    	proxy_set_header Connection "upgrade";
 	
-		proxy_pass http://back:8080$request_uri;
+		if ($host = pad.dshs.diverse-team.fr){
+                  proxy_pass http://etherpad:9001$request_uri;
+		}
+
+		if ($host = phpmyadmin.dshs.diverse-team.fr){
+                  proxy_pass http://myadmin:8082$request_uri;
+		}
 	
 }
 
@@ -20,6 +26,13 @@ location / {
 		proxy_set_header X-Real-IP  $remote_addr;
 		proxy_set_header X-Forwarded-For $remote_addr;
 		
+		if ($host = pad.dshs.diverse-team.fr){
+                  proxy_pass http://etherpad:9001$request_uri;
+		}
+
+		if ($host = phpmyadmin.dshs.diverse-team.fr){
+                  proxy_pass http://myadmin:8082$request_uri;
+		}
 		
 		try_files $uri $uri/ /index.html;
 
