--- a/api/server-confs/api.conf
+++ b/api/server-confs/api.conf
@@ -7,11 +7,11 @@ location /api {
 		proxy_set_header Upgrade $http_upgrade;
 	    	proxy_set_header Connection "upgrade";
 	
-		if ($host = pad.dshs.diverse-team.fr){
+		if ($host = pad.dshs.istic.univ-rennes1.fr){
                   proxy_pass http://etherpad:9001$request_uri;
 		}
 
-		if ($host = phpmyadmin.dshs.diverse-team.fr){
+		if ($host = phpmyadmin.dshs.istic.univ-rennes1.fr){
                   proxy_pass http://myadmin:8082$request_uri;
 		}
 	
@@ -26,11 +26,11 @@ location / {
 		proxy_set_header X-Real-IP  $remote_addr;
 		proxy_set_header X-Forwarded-For $remote_addr;
 		
-		if ($host = pad.dshs.diverse-team.fr){
+		if ($host = pad.dshs.istic.univ-rennes1.fr){
                   proxy_pass http://etherpad:9001$request_uri;
 		}
 
-		if ($host = phpmyadmin.dshs.diverse-team.fr){
+		if ($host = phpmyadmin.dshs.istic.univ-rennes1.fr){
                   proxy_pass http://myadmin:8082$request_uri;
 		}
 		
