update Readme + a little fix

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,11 +32,11 @@ services:
       - 443:8443
     volumes:
       - ./api/server-confs:/server-confs:ro
-      - ./certificates:/etc/letsencrypt:rw
+      # - ./certificates:/etc/letsencrypt:rw
     environment:
-      - SERVER_NAME=dshs.istic.univ-rennes1.fr
-      - AUTO_LETS_ENCRYPT=yes
-      - REDIRECT_HTTP_TO_HTTPS=yes
+      # - SERVER_NAME=dshs.istic.univ-rennes1.fr
+      # - AUTO_LETS_ENCRYPT=yes
+      # - REDIRECT_HTTP_TO_HTTPS=yes
       - USE_CLIENT_CACHE=yes
   myadmin:
     image : phpmyadmin
